# issue-pr-cron

./: .gitignore  CLAUDE.md  Cargo.toml  ORG-REGISTRY.md  QA-GUIDE.md  README.md  campaign-mcp.json  campaign-prompt.txt  campaign-run.sh  campaign-settings.json  cron.env.example  flake.nix  human-queue.json  merge-prompt.txt  merge-run.sh  merge-settings.json  mutation-test-scans.json  pr-review-report.sh  refresh-human-queue.sh  review-mcp.json  review-prompt-mcp.txt  review-prompt.txt  review-run.sh  review-settings.json  sort-review-queue.sh  usage-gate.sh
.github/workflows/: rust.yml
hooks/: block-cron-git-bypass.sh  block-nix-wrap-gh.sh
metrics/: runs.jsonl
pr-review-report-rs/: Cargo.toml
pr-review-report-rs/src/: main.rs
